--- a/src/app.scss
+++ b/src/app.scss
@@ -47,9 +47,9 @@ a {
   padding: 15px;
 }
 
-section {
-  scroll-snap-align: center;
-}
+// section {
+//   scroll-snap-align: center;
+// }
 
 .bg {
   background: linear-gradient(180deg, #0c0c1d, #111132);
